src/test/ui/issues/30000-39999/issue-38715.stderr
error[E0428]: the name `foo` is defined multiple times
  --> $DIR/issue-38715.rs:5:1
   |
LL | macro_rules! foo { ($i:ident) => {} }
   | ---------------- previous definition of the macro `foo` here
...
LL | macro_rules! foo { () => {} }
   | ^^^^^^^^^^^^^^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the macro namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
